style: fix checkbox vertical alignment

--- a/packages/text-split/partials/checkbox-list/style.css
+++ b/packages/text-split/partials/checkbox-list/style.css
@@ -11,8 +11,6 @@
     margin-bottom: 0.75em;
 
     & .check-icon {
-      align-self: flex-end;
-      display: flex;
       margin-right: 16px;
 
       & svg {
